refactor(project): split package